@@ -17,17 +17,12 @@ import com.yahoo.vespa.hosted.controller.api.integration.configserver.Node;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.NodeRepoStats;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.NodeRepository;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.TargetVersions;
-import com.yahoo.vespa.hosted.controller.api.integration.noderepository.NodeRepositoryNode;
-import com.yahoo.vespa.hosted.controller.api.integration.noderepository.NodeState;
 
 import java.net.URI;
 import java.time.Duration;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.UnaryOperator;
@@ -46,50 +41,56 @@ public class NodeRepositoryMock implements NodeRepository {
     private final Map<DeploymentId, Pair<Double, Double>> trafficFractions = new HashMap<>();
     private final Map<ZoneId, Map<TenantName, URI>> archiveUris = new HashMap<>();
 
-    private boolean allowPatching = false;
+    private boolean allowPatching = true;
     private boolean hasSpareCapacity = false;
 
     @Override
-    public void addNodes(ZoneId zone, Collection<NodeRepositoryNode> nodes) {
-        throw new UnsupportedOperationException();
+    public void addNodes(ZoneId zone, List<Node> nodes) {
+        Map<HostName, Node> existingNodes = nodeRepository.getOrDefault(zone, Map.of());
+        for (var node : nodes) {
+            if (existingNodes.containsKey(node.hostname())) {
+                throw new IllegalArgumentException("Node " + node.hostname() + " already added in zone " + zone);
+            }
+        }
+        putNodes(zone, nodes);
     }
 
     @Override
     public void deleteNode(ZoneId zone, String hostname) {
-        throw new UnsupportedOperationException();
+        require(zone, hostname);
+        nodeRepository.get(zone).remove(HostName.from(hostname));
     }
 
     @Override
-    public void setState(ZoneId zone, NodeState nodeState, String hostName) {
-        var existing = list(zone, List.of(HostName.from(hostName)));
-        if (existing.size() != 1) throw new IllegalArgumentException("Node " + hostName + " not found in " + zone);
-
-        var node = Node.builder(existing.get(0))
-                       .state(Node.State.valueOf(nodeState.name()))
-                       .build();
+    public void setState(ZoneId zone, Node.State state, String hostname) {
+        Node node = Node.builder(require(zone, hostname))
+                        .state(Node.State.valueOf(state.name()))
+                        .build();
         putNodes(zone, node);
     }
 
     @Override
     public Node getNode(ZoneId zone, String hostname) {
-        throw new UnsupportedOperationException();
+        return require(zone, hostname);
     }
 
     @Override
     public List<Node> list(ZoneId zone, boolean includeDeprovisioned) {
-        return List.copyOf(nodeRepository.getOrDefault(zone, Map.of()).values());
+        return nodeRepository.getOrDefault(zone, Map.of()).values().stream()
+                             .filter(node -> includeDeprovisioned || node.state() != Node.State.deprovisioned)
+                             .collect(Collectors.toList());
     }
 
     @Override
     public List<Node> list(ZoneId zone, ApplicationId application) {
-        return nodeRepository.getOrDefault(zone, Collections.emptyMap()).values().stream()
+        return nodeRepository.getOrDefault(zone, Map.of()).values().stream()
                              .filter(node -> node.owner().map(application::equals).orElse(false))
                              .collect(Collectors.toList());
     }
 
     @Override
     public List<Node> list(ZoneId zone, List<HostName> hostnames) {
-        return nodeRepository.getOrDefault(zone, Collections.emptyMap()).values().stream()
+        return nodeRepository.getOrDefault(zone, Map.of()).values().stream()
                              .filter(node -> hostnames.contains(node.hostname()))
                              .collect(Collectors.toList());
     }
@@ -179,42 +180,36 @@ public class NodeRepositoryMock implements NodeRepository {
     }
 
     @Override
-    public void retireAndDeprovision(ZoneId zoneId, String hostName) {
-        nodeRepository.get(zoneId).remove(HostName.from(hostName));
+    public void retire(ZoneId zone, String hostname, boolean wantToRetire, boolean wantToDeprovision) {
+        patchNodes(zone, hostname, (node) -> Node.builder(node).wantToRetire(wantToRetire).wantToDeprovision(wantToDeprovision).build());
     }
 
     @Override
-    public void patchNode(ZoneId zoneId, String hostName, NodeRepositoryNode node) {
-        if (!allowPatching) throw new UnsupportedOperationException();
-        List<Node> existing = list(zoneId, List.of(HostName.from(hostName)));
-        if (existing.size() != 1) throw new IllegalArgumentException("Node " + hostName + " not found in " + zoneId);
-
-        // Note: Only supports switchHostname, modelName and wantToRetire
-        Node.Builder newNode = Node.builder(existing.get(0));
-        if (node.getSwitchHostname() != null)
-            newNode.switchHostname(node.getSwitchHostname());
-        if (node.getModelName() != null)
-            newNode.modelName(node.getModelName());
-        if (node.getWantToRetire() != null)
-            newNode.wantToRetire(node.getWantToRetire());
-
-        Map<String, String> reports = new HashMap<>();
-        for (var kv : node.getReports().entrySet()) {
-            if (kv.getValue() == null) continue; // Null value clears a report
-            reports.put(kv.getKey(), kv.getValue().toString());
-        }
-        newNode.reports(reports);
-
-        putNodes(zoneId, newNode.build());
+    public void updateReports(ZoneId zone, String hostname, Map<String, String> reports) {
+        Map<String, String> trimmedReports = reports.entrySet().stream()
+                                                    // Null value clears a report
+                                                    .filter(kv -> kv.getValue() != null)
+                                                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+        patchNodes(zone, hostname, (node) -> Node.builder(node).reports(trimmedReports).build());
     }
 
     @Override
-    public void reboot(ZoneId zoneId, String hostName) {
+    public void updateModel(ZoneId zone, String hostname, String modelName) {
+        patchNodes(zone, hostname, (node) -> Node.builder(node).modelName(modelName).build());
+    }
+
+    @Override
+    public void updateSwitchHostname(ZoneId zone, String hostname, String switchHostname) {
+        patchNodes(zone, hostname, (node) -> Node.builder(node).switchHostname(switchHostname).build());
+    }
+
+    @Override
+    public void reboot(ZoneId zone, String hostname) {
         throw new UnsupportedOperationException();
     }
 
     @Override
-    public boolean isReplaceable(ZoneId zoneId, List<HostName> hostNames) {
+    public boolean isReplaceable(ZoneId zone, List<HostName> hostnames) {
         return hasSpareCapacity;
     }
 
@@ -248,14 +243,6 @@ public class NodeRepositoryMock implements NodeRepository {
     /** Remove all nodes in all zones */
     public void clear() {
         nodeRepository.clear();
-    }
-
-    public Node require(HostName hostName) {
-        return nodeRepository.values().stream()
-                             .map(zoneNodes -> zoneNodes.get(hostName))
-                             .filter(Objects::nonNull)
-                             .findFirst()
-                             .orElseThrow(() -> new NoSuchElementException("No node with the hostname " + hostName + " is known."));
     }
 
     /** Add a fixed set of nodes to given zone */
@@ -300,8 +287,7 @@ public class NodeRepositoryMock implements NodeRepository {
     }
 
     public void doUpgrade(DeploymentId deployment, Optional<HostName> hostName, Version version) {
-        modifyNodes(deployment, hostName, node -> {
-            assert node.wantedVersion().equals(version);
+        patchNodes(deployment, hostName, node -> {
             return Node.builder(node)
                        .currentVersion(version)
                        .currentDockerImage(node.wantedDockerImage())
@@ -309,38 +295,20 @@ public class NodeRepositoryMock implements NodeRepository {
         });
     }
 
-    private void modifyNodes(DeploymentId deployment, Optional<HostName> hostname, UnaryOperator<Node> modification) {
-        List<Node> nodes = hostname.map(this::require)
-                                   .map(Collections::singletonList)
-                                   .orElse(list(deployment.zoneId(), deployment.applicationId()));
-        putNodes(deployment.zoneId(),
-                 nodes.stream().map(modification).collect(Collectors.toList()));
-    }
-
     public void requestRestart(DeploymentId deployment, Optional<HostName> hostname) {
-        modifyNodes(deployment, hostname, node -> Node.builder(node).wantedRestartGeneration(node.wantedRestartGeneration() + 1).build());
+        patchNodes(deployment, hostname, node -> Node.builder(node).wantedRestartGeneration(node.wantedRestartGeneration() + 1).build());
     }
 
     public void doRestart(DeploymentId deployment, Optional<HostName> hostname) {
-        modifyNodes(deployment, hostname, node -> Node.builder(node).restartGeneration(node.restartGeneration() + 1).build());
+        patchNodes(deployment, hostname, node -> Node.builder(node).restartGeneration(node.restartGeneration() + 1).build());
     }
 
     public void requestReboot(DeploymentId deployment, Optional<HostName> hostname) {
-        modifyNodes(deployment, hostname, node -> Node.builder(node).wantedRebootGeneration(node.wantedRebootGeneration() + 1).build());
+        patchNodes(deployment, hostname, node -> Node.builder(node).wantedRebootGeneration(node.wantedRebootGeneration() + 1).build());
     }
 
     public void doReboot(DeploymentId deployment, Optional<HostName> hostname) {
-        modifyNodes(deployment, hostname, node -> Node.builder(node).rebootGeneration(node.rebootGeneration() + 1).build());
-    }
-
-    public void addReport(ZoneId zoneId, HostName hostName, String reportId, String report) {
-        Node node = nodeRepository.getOrDefault(zoneId, Map.of()).get(hostName);
-        if (node == null) throw new IllegalArgumentException("No node named " + hostName + " in " + zoneId);
-
-        Map<String, String> reports = new HashMap<>(node.reports());
-        reports.put(reportId, report);
-        Node newNode = Node.builder(node).reports(reports).build();
-        putNodes(zoneId, newNode);
+        patchNodes(deployment, hostname, node -> Node.builder(node).rebootGeneration(node.rebootGeneration() + 1).build());
     }
 
     public NodeRepositoryMock allowPatching(boolean allowPatching) {
@@ -350,6 +318,35 @@ public class NodeRepositoryMock implements NodeRepository {
 
     public void hasSpareCapacity(boolean hasSpareCapacity) {
         this.hasSpareCapacity = hasSpareCapacity;
+    }
+
+    private Node require(ZoneId zone, String hostname) {
+        return require(zone, HostName.from(hostname));
+    }
+
+    private Node require(ZoneId zone, HostName hostname) {
+        Node node = nodeRepository.getOrDefault(zone, Map.of()).get(hostname);
+        if (node == null) throw new IllegalArgumentException("Node not found in " + zone + ": " + hostname);
+        return node;
+    }
+
+    private void patchNodes(ZoneId zone, String hostname, UnaryOperator<Node> patcher) {
+        patchNodes(zone, Optional.of(HostName.from(hostname)), patcher);
+    }
+
+    private void patchNodes(DeploymentId deployment, Optional<HostName> hostname, UnaryOperator<Node> patcher) {
+        patchNodes(deployment.zoneId(), hostname, patcher);
+    }
+
+    private void patchNodes(ZoneId zone, Optional<HostName> hostname, UnaryOperator<Node> patcher) {
+        if (!allowPatching) throw new UnsupportedOperationException("Patching is disabled in this mock");
+        List<Node> nodes;
+        if (hostname.isPresent()) {
+            nodes = List.of(require(zone, hostname.get()));
+        } else {
+            nodes = list(zone, false);
+        }
+        putNodes(zone, nodes.stream().map(patcher).collect(Collectors.toList()));
     }
 
 }
